fixed pointer cursor being applied to non-collapsable h3s
Reviewed-on: http://review.couchbase.org/11145
Tested-by: Aliaksey Kandratsenka <alkondratenko@gmail.com>

--- a/priv/public/css/screen.css
+++ b/priv/public/css/screen.css
@@ -218,7 +218,7 @@ h1 .nav a {font-size:11px; font-weight:bolder;}
 .graph_info_label {padding:3px; font-size:11px;position:absolute;top:-6px;left:30px;}
 .darker_block {position:relative;*zoom:1;}
 .darker_block.withtotal {background:url(../images/bg_total.gif) 100% 0 repeat-y;}
-.darker_block h3 {overflow:hidden;cursor:pointer;background:#EEEEEF;padding:5px 10px;font-size:14px;text-transform:uppercase;*zoom:1;}
+.darker_block h3 {overflow:hidden;background:#EEEEEF;padding:5px 10px;font-size:14px;text-transform:uppercase;*zoom:1;}
 #analytics .darker_block h3{min-height:auto}
 .darker_block h3 ins, .expander {float:left;width:0;height:0;margin:2px 0.75em 0 0;border-style:solid;border-width:10px 10px 0 10px;border-color:#01b0ff transparent transparent transparent;cursor:pointer;}
 .darker_block h3:hover ins, .expander:hover {border-top-color:#339ACA;}
@@ -315,7 +315,8 @@ div.analytics-small-graph > .right-arrow ul li:hover, div.analytics-small-graph 
 .bucket_details .bolder {font-weight:bold}
 .shadow_box .section {border:0px;}
 
-h3.block-expander a { font-weight:normal; text-transform:none; }
+.block-expander{cursor:pointer;}
+.block-expander a { font-weight:normal; text-transform:none; }
 
 /* .shadow_box pre {white-space:normal; display:block; overflow:auto;width:920px; padding:5px 9px 0 10px;line-height: 1.6em;white-space: pre-wrap;background:#F6F6F7;border:1px solid #CCC;border-top:1px solid #999} */
 
